k8s/prod/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-clinica-ingress
  annotations:
    appgw.ingress.kubernetes.io/ssl-redirect: "true"  # HTTPS obrigatório em prod
    appgw.ingress.kubernetes.io/appgw-ssl-certificate: "clinica-ssl-cert"
spec:
  tls:
  - hosts:
    - api.clinica.com
    secretName: clinica-tls-secret
  rules:
  - host: api.clinica.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-clinica-service
            port:
              number: 80
